--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,34 @@
     <main>
       <section>
         <h2>Co náš drink přináší</h2>
-        <p></p>
+        <div class="content">
+          <img src="./assets/images/can-with-liquid.png" alt="Can with liquid 3D render">
+          <div class="text">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus consequatur molestiae nesciunt, commodi facilis expedita molestias fuga? Autem amet provident, nostrum accusamus magni, voluptatum deserunt dignissimos omnis, qui iste reprehenderit! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime magni cum eveniet tenetur minus aspernatur deserunt laborum, consequatur fugit veritatis distinctio, vero cupiditate doloribus illo assumenda? Rerum possimus temporibus libero!</p>
+            <a href="">Přečíst více</a>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h2>Prodej</h2>
+        <div class="shop-content">
+          <div class="product">
+            <img src="./assets/images/basic-transformed.jpg" alt="can">
+            <div class="text">
+              <h3>Zero Drink</h3>
+              <p class="price">90 Kč</p>
+            </div>
+            <a href="">Koupit</a>
+          </div>
+          <div class="product">
+            <img src="./assets/images/basic-transformed.jpg" alt="can">
+            <div class="text">
+              <h3>Zero Drink x6</h3>
+              <p class="price">500 Kč</p>
+            </div>
+            <a href="">Koupit</a>
+          </div>
+        </div>
       </section>
     </main>
   </body>
